# voraus-ros-bridge

./: .clang-format  .clang-tidy  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  LICENSE.txt  Makefile  README.md  compose.yaml  compose.yml  deny.toml  package.xml
.devcontainer/: Dockerfile  devcontainer.json  entrypoint  entrypoint.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  ci_build.yml  ci_build_dev_container.yml  ci_build_release_image.yml  ci_format_code.yml  ci_integration_test.yml  ci_launch_dev_container.yml  ci_lint.yml  ci_test.yml  ci_unit_test.yml
docker/release/: Dockerfile  entrypoint.sh
examples/opc-ua/: client.rs  server.rs
examples/opc_ua/: rapid-clock.rs  sine-joint-positions.rs
examples/ros2/: simple-publisher.rs  simple-subscriber.rs
launch/: voraus-ros-bridge.launch.py
src/: main.rs  opc_ua_client.rs  register_subscriptions.rs  ros_message_creation.rs  ros_publisher.rs  ros_service_server.rs  ros_services.rs  simple_opc_ua_client.rs  simple_opc_ua_subscriber.rs  simple_publisher.rs  simple_subscriber.rs
tests/: common.rs  test_bridge.rs  test_bridge_methods.rs  test_bridge_variables.rs  test_helper_opc_ua_publisher.rs  test_publisher.rs  test_simple_opc_ua_subscriber.rs
tests/common/: mod.rs
tests/helpers/: mod.rs  opc_ua_publisher_single_linear.rs  opc_ua_test_server.rs  ros_service_caller.rs  ros_subscriber.rs
tests/resources/: clock.conf  opc_ua_test_server.conf
voraus_interfaces/: CMakeLists.txt  README.md  package.xml
voraus_interfaces/msg/: CartesianStiffness.msg  Voraus.msg
voraus_interfaces/srv/: MoveJoints.srv
voraus_ros_bridge/: CMakeLists.txt  package.xml
voraus_ros_bridge/include/voraus_ros_bridge/: voraus_robot_control_interface.hpp  voraus_ros_bridge_node.hpp
voraus_ros_bridge/src/: voraus_robot_control_interface.cpp  voraus_ros_bridge.cpp  voraus_ros_bridge_node.cpp
voraus_ros_bringup/: CMakeLists.txt  package.xml
voraus_ros_bringup/launch/: voraus_ros_bridge.launch.py
voraus_ros_interfaces/: CMakeLists.txt  package.xml
voraus_yu_description/: CMakeLists.txt  package.xml
voraus_yu_description/launch/: visualize_yu.launch.py
voraus_yu_description/meshes/yu+5-100/collision/: base.stl  forearm.stl  shoulder.stl  upper_arm.stl  wrist1.stl  wrist2.stl  wrist3.stl
voraus_yu_description/meshes/yu+5-100/visual/: base.stl  forearm.stl  shoulder.stl  upper_arm.stl  wrist1.stl  wrist2.stl  wrist3.stl
voraus_yu_description/rviz/: visualize_yu.rviz
voraus_yu_description/urdf/: yu+5-100.urdf.xacro
