[package]
name = "voraus-ros-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.74" # https://github.com/ros2-rust/ros2_rust/issues/398
authors = ["Jan-Niklas Burfeind <jan-niklas.burfeind@vorausrobotik.com>", "Philipp Caspers <philipp.caspers@vorausrobotik.com>", "Dwayne Steinke <dwayne.steinke@vorausrobotik.com>", "Tobias Brinker <tobias.brinker@vorausrobotik.com>"]
description = "Enables `voraus.core` integration within the ROS framework."
readme = "README.md"
homepage = "https://github.com/vorausrobotik/voraus-ros-bridge"
repository = "https://github.com/vorausrobotik/voraus-ros-bridge"
license = "MIT"
keywords = ["ros2", "opc-ua", "bridge", "voraus"]
categories = ["command-line-utilities"]


[dependencies]
opcua = { git = "https://github.com/locka99/opcua.git", rev = "cf2d1bdd52b47273dcbaad439a5a1ae4a528c572", features = ["client", "console-logging"] }
std_msgs = { version = "4.2.4" }
sensor_msgs = { version = "4.2.4" }
builtin_interfaces = { version = "1.2.1" }
voraus_interfaces = { version = "0.1.0" }
rclrs = { version = "0.4.1" }
rosidl_runtime_rs = { version = "0.4.1" }
tokio = "1.38.0"

[dev-dependencies]
rclrs = { version = "0.4.1" }
std_msgs = { version = "4.2.4" }
sensor_msgs = { version = "4.2.4" }
builtin_interfaces = { version = "1.2.1" }
opcua = { git = "https://github.com/locka99/opcua.git", rev = "cf2d1bdd52b47273dcbaad439a5a1ae4a528c572", features = ["server", "console-logging"] }
socket2 = "0.5.7"
tokio = "1.38.0"

[[example]]
name = "rapid-clock"
path = "examples/opc_ua/rapid-clock.rs"

[[example]]
name = "simple-publisher"
path = "examples/ros2/simple-publisher.rs"

[[example]]
name = "simple-subscriber"
path = "examples/ros2/simple-subscriber.rs"

[[example]]
name = "sine-joint-positions"
path = "examples/opc_ua/sine-joint-positions.rs"
