[package]
name = "voraus-ros-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.74" # https://github.com/ros2-rust/ros2_rust/issues/398
authors = ["Jan-Niklas Burfeind <jan-niklas.burfeind@vorausrobotik.com>", "Philipp Caspers <philipp.caspers@vorausrobotik.com>", "Dwayne Steinke <dwayne.steinke@vorausrobotik.com>", "Tobias Brinker <tobias.brinker@vorausrobotik.com>"]
description = "Enables `voraus.core` integration within the ROS framework."
readme = "README.md"
homepage = "https://github.com/vorausrobotik/voraus-ros-bridge"
repository = "https://github.com/vorausrobotik/voraus-ros-bridge"
license = "MIT"
keywords = ["ros2", "opc-ua", "bridge", "voraus"]
categories = ["command-line-utilities"]


[dependencies]
opcua = { version = "0.12.0", features = ["client", "console-logging"] }
# Explicitly pinning openssl >= 0.10.66 is required, as long as opcua is not 0.13.0, yet.
openssl = { version = "0.10.66" }
std_msgs = { version = "4.2.4" }
std_srvs = { version = "4.2.4" }
sensor_msgs = { version = "4.2.4" }
builtin_interfaces = { version = "1.2.1" }
voraus_interfaces = { version = "0.1.0" }
rclrs = { version = "0.4.1" }
rosidl_runtime_rs = { version = "0.4.1" }
log = "0.4.22"
env_logger = "0.11.5"
tokio = "1.38.0"

[dev-dependencies]
rclrs = { version = "0.4.1" }
std_msgs = { version = "4.2.4" }
sensor_msgs = { version = "4.2.4" }
builtin_interfaces = { version = "1.2.1" }
opcua = { version = "0.12.0", features = ["server", "console-logging"] }
socket2 = "0.5.7"
tokio = "1.38.0"

[[example]]
name = "rapid-clock"
path = "examples/opc_ua/rapid-clock.rs"

[[example]]
name = "simple-publisher"
path = "examples/ros2/simple-publisher.rs"

[[example]]
name = "simple-subscriber"
path = "examples/ros2/simple-subscriber.rs"

[[example]]
name = "sine-joint-positions"
path = "examples/opc_ua/sine-joint-positions.rs"
