<package format="3">
  <name>voraus_interfaces</name>
  <version>0.1.0</version>
  <description>Defines custom ROS message/service types for the voraus-bridge</description>
  <maintainer email="jan-niklas.burfeind@vorausrobotik.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
